# bankfind

./: .gitignore  .travis.yml  404.html  CHANGELOG.md  CNAME  LICENSE  README.md  index.html  pyproject.toml  pytest.ini  requirements.txt
bankfind/: __init__.py  base.py  main.py
bankfind/metadata/: __init__.py  failure.py  financials.py  history.py  institution.py  location.py  summary.py
docs/: mkdocs.yml
docs/docs/: filtering.md  functions.md  index.md
docs/docs/js/: custom.js
filtering/: index.html
functions/: index.html
js/: custom.js
release_notes/: index.html
search/: search_index.json
tests/: test_functions.py
